@@ -45,6 +45,8 @@ PHP                                                                        NEWS
   (vnegrier at optilian dot com, Ilia)
 - Fixed bug #46192 (ArrayObject with objects as storage serialization).
   (Etienne)
+- Fixed bug #46222 (ArrayObject EG(uninitialized_var_ptr) overwrite).
+  (Etienne)
 
 02 Sep 2008, PHP 5.3.0 Alpha 2
 - Removed special treatment of "/tmp" in sessions for open_basedir.
